--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -79,7 +79,7 @@ main.class=cityofaaron.CityOfAaron
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_10
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
